# SPH

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: display.cpp  display.h  main.cpp  vec2.h
